# AI-Agent-Buildathon-2026

./: .gitignore  ARCHITECTURE.md  BUILDATHON_SUBMISSION.md  PITCH_90_SECONDS.md  PROJECT_BRIEF.md  README.md  docker-compose.yml  run_demo.sh  run_server.sh  run_ui.sh  stop_demo.sh
.devcontainer/: devcontainer.json  setup.sh  start.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: ARCHITECTURE_FLOW.txt  TECHNICAL_FLOW.txt
documents/: TECHNICAL_FLOW.txt
home-insurance-mcp/: .env.example  .gitignore  README.md  pyproject.toml
home-insurance-mcp-client/: .env.example  README.md  pyproject.toml
home-insurance-mcp-client/.streamlit/: config.toml
home-insurance-mcp-client/scripts/: __init__.py  answer_call_debug.py  client_smoke.py  demo_preflight.py  graph_smoke.py
home-insurance-mcp-client/src/client/: __init__.py  app.py  graph.py  main.py  mcp_client.py  prompts.py  ui_theme.css
home-insurance-mcp/src/server/: __init__.py  main.py  mcp_server.py
scripts/: export_submission.ps1  export_submission.sh  export_submission_local.py
