[project]
name = "home-insurance-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "openai>=2.16.0",
    "pillow>=12.1.0",
    "pypdf>=6.6.2",
    "pytesseract>=0.3.13",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "starlette>=0.52.1",
    "uvicorn>=0.40.0",
]
